force-app/src/objects/c2g__CollectionsPlusSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Collections Plus Settings</description>
    <fields>
        <fullName>c2g__AttachInvoicesInReminderEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attach all the Invoices for an Account into one email per Reminder Rule</description>
        <inlineHelpText>When selected all the invoices for the account are attached to the reminder email. The default is selected. Note: The Send All Invoices in an Email checkbox must also be selected.</inlineHelpText>
        <label>Attach Invoices to Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CollectionsRemindersLimit__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>The number of records that are processed in a batch by the Reminder process.</description>
        <label>Collections Reminders Limit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CongaBatchUrl__c</fullName>
        <inlineHelpText>Conga Batch URL setting is required if using Conga Conductor v8.13 or earlier.</inlineHelpText>
        <label>Conga Batch URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__CongaDashboardPage__c</fullName>
        <inlineHelpText>Conga Dashboard Page setting is required if using Conga Conductor v8.13 or earlier</inlineHelpText>
        <label>Conga Dashboard Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ContactsFieldNameForSalesInvoice__c</fullName>
        <description>Defines the field name to use as the source for additional contact email addresses when sending reminders for sales invoices.  You must enter the name and relationship in the format RelationshipObject__r.FieldName__c</description>
        <inlineHelpText>Defines the field name to use as the source for additional contact email addresses when sending reminders for sales invoices.  You must enter the name and relationship in the format RelationshipObject__r.FieldName__c</inlineHelpText>
        <label>Additional Contacts Field Name For SIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerStatementCongaAttachmentPrefix__c</fullName>
        <description>Defines the prefix for Conga Attachments for Customer Statements.</description>
        <inlineHelpText>Defines the prefix for Conga Attachments for Customer Statements.</inlineHelpText>
        <label>Conga Statements Attachment Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerStatementsLimit__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>The number of records that are processed in a batch by the Statement process.</description>
        <label>Customer Statements Limit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DetailedReminderLogs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Add detailed reminder logs for all contacts.</description>
        <inlineHelpText>Indicates that detailed reminder logs are created for all contacts when sending reminders. The default value is true. If the value is set to false, reminder logs are only created for the finance contact. If no finance contact exists, detailed logs are only created for the first collections communication contact.</inlineHelpText>
        <label>Detailed reminder logs for all contacts.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DetailedRemindersBatchProcessLogs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Add detailed process logs for each reminder batch job</description>
        <inlineHelpText>Indicates that detailed process logs are created for each reminder batch job.</inlineHelpText>
        <label>Detailed Reminders Batch Process Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EmailTemplateFolders__c</fullName>
        <description>Fetch email templates from folders.</description>
        <inlineHelpText>Used to filter email templates by folder when creating reminder or statement rules. You can enter multiple folder names, separated by a comma. If blank, all email templates are displayed when creating rules.</inlineHelpText>
        <label>Email Template Folders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReminderLogsRetentionPeriod__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Contains the minimum number of days to retain logs before deletion.</description>
        <inlineHelpText>Defines the minimum number of days to retain Collections reminder and statement logs before they can be deleted. The value must be greater than or equal to 90.</inlineHelpText>
        <label>Retention Period (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__RemindersBatchScopeSize__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The scope size of RemindersSendEmailBatch.</description>
        <label>Reminders Batch Scope Size</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SendAllInvoicesInOneEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Combines all the Sales Invoices for an Account into one email per Reminder Rule</description>
        <inlineHelpText>Used for sending Reminders via Collections Plus. Combines all the Sales Invoices for an Account into one email per Reminder Rule to reduce number of emails being sent. The default is false, one email per sales invoice.</inlineHelpText>
        <label>Send all Invoices in one email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SendBillingDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables you to send reminders for Billing Documents in Collections Plus</description>
        <inlineHelpText>Used for sending reminders for Billing Documents in Collections Plus.</inlineHelpText>
        <label>Send Reminders for Billing Documents</label>
        <type>Checkbox</type>
    </fields>
    <label>Collections Plus Settings</label>
</CustomObject>